--- a/style.css
+++ b/style.css
@@ -184,6 +184,117 @@ section {
     border-color: var(--main-color);
 }
 
+.home .profession-container {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+.home .profession-container .profession-box {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 768px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: professionRotate 13s ease-out infinite;
+}
+
+@keyframes professionRotate {
+
+    0%,
+    20% {
+        transform: rotate(0deg);
+    }
+
+    25%,
+    45% {
+        transform: rotate(-90deg);
+    }
+
+    50%,
+    70% {
+        transform: rotate(-180deg);
+    }
+
+    75%,
+    95% {
+        transform: rotate(-270deg);
+    }
+
+    100% {
+        transform: rotate(-360deg);
+    }
+}
+
+.home .profession-box .profession {
+    position: absolute;
+    left: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    color: var(--main-color);
+    transform: rotate(calc(360deg / 4 * var(--i)));
+    transform-origin: 384px;
+    background: var(--bg-color);
+    padding: 13px 0;
+}
+
+.home .profession-box .profession:nth-child(1) i {
+    margin-right: 15px;
+}
+
+.home .profession-box .profession:nth-child(2),
+.home .profession-box .profession:nth-child(4) {
+    padding-bottom: 20px;
+}
+
+.home .profession i {
+    font-size: 3.8rem;
+}
+
+.home .profession h3 {
+    font-size: 3.2rem;
+    line-height: 1;
+    font-weight: 600;
+}
+
+.home .profession-box .circle {
+    width: 560px;
+    height: 560px;
+    border: 3px solid var(--main-color);
+    border-radius: 50%;
+    z-index: -1;
+}
+
+.home .profession-container .overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0;
+    height: 0;
+    border-top: 50vh solid var(--main-color);
+    border-right: 384px solid var(--main-color);
+    border-bottom: 50vh solid var(--main-color);
+    border-left: 384px solid transparent;
+}
+
+.home-img img {
+    position: absolute;
+    bottom: 0;
+    right: 40px;
+    pointer-events: none;
+    max-width: 480px;
+    max-height: 100vh;
+}
+
 span {
     color: var(--main-color);
 }
@@ -391,11 +502,11 @@ span {
         font-size: 55%;
     }
 
-    .home  {
+    .home .profession-container .profession-box {
         right: -10%;
     }
 
-    .home {
+    .home .profession-container .overlay{
         right: -6%;
     }
 
@@ -405,7 +516,7 @@ span {
 }
 
 @media (max-width: 1100px) {
-    .home {
+    .home .profession-container .profession-box {
         right: -15%;
     }
 
@@ -423,11 +534,11 @@ span {
         padding: 10rem 3% 2rem;
     }
 
-    .home  {
+    .home .profession-container .profession-box {
         right: -20%;
     }
 
-    .home  {
+    .home .profession-container .overlay {
         right: -12%;
     }
 
@@ -451,11 +562,11 @@ span {
         max-width: 50rem;
     }
 
-    .home {
+    .home .profession-container .profession-box {
         right: -35%;
     }
 
-    .home {
+    .home .profession-container .overlay {
         right: -30%;
     }
 
@@ -473,11 +584,11 @@ span {
         color: var(--main-color);
     }
 
-    .home {
+    .home .profession-container .profession-box {
         right: -50%;
     }
 
-    .home {
+    .home .profession-container .overlay{
         right: -43%;
     }
 }
@@ -561,53 +672,53 @@ span {
         margin: 2.5rem .75rem 3rem;
     }
 
-    .home {
+    .home .profession-container{
         left: 0;
         width: 100%;
         height: 100%;
     }
 
-    .home {
+    .home .profession-container .profession-box {
         position: fixed;
         top: 450px;
         left: 0;
         width: 100%;
     }
 
-    .home  {
+    .home .profession-box .profession {
         padding: 0 13px;
         left: auto;
         transform-origin: 0;
     }
 
-    .home {
+    .home .profession-box .profession:nth-child(1) {
         transform: rotate(-90deg) translate(-120px, -210px);
     }
 
-    .home  {
+    .home .profession-box .profession:nth-child(1) i {
         margin-right: 0;
     }
 
-    .home {
+    .home .profession-box .profession:nth-child(2) {
         transform: rotate(0deg) translate(0, -325px);
     }
 
-    .home {
+    .home .profession-box .profession:nth-child(3) {
         transform: rotate(90deg) translate(-115px, -450px);
     }
 
-    .home {
+    .home .profession-box .profession:nth-child(4) {
         transform: rotate(180deg) translate(-220px, -325px);
     }
 
-    .home  {
+    .home .profession-box .circle {
         position: fixed;
         width: 670px;
         height: 670px;
         z-index: -1;
     }
 
-    .home  {
+    .home .profession-container .overlay {
         position: fixed;
         top: 70rem;
         left: 50%;
@@ -646,23 +757,24 @@ span {
         right: 6rem;
     }
 
-    .home {
+
+    .home .profession-box .profession:nth-child(1) {
         transform: rotate(-90deg) translate(-110px, -220px);
     }
 
-    .home {
+    .home .profession-box .profession:nth-child(2) {
         transform: rotate(0deg) translate(5px, -325px);
     }
 
-    .home {
+    .home .profession-box .profession:nth-child(3) {
         transform: rotate(90deg) translate(-105px, -440px);
     }
 
-    .home {
+    .home .profession-box .profession:nth-child(4) {
         transform: rotate(180deg) translate(-210px, -325px);
     }
 
-    .home {
+    .home .profession-container .overlay {
         top: 80rem;
     }
 
